tests/Error/ErrorCollector/FixerRunnerSource/phpunit-fixer-config.php
<?php

declare(strict_types=1);

use PhpCsFixer\Fixer\PhpUnit\PhpUnitStrictFixer;
use Symplify\EasyCodingStandard\Config\ECSConfig;

return ECSConfig::configure()
    ->withRules([PhpUnitStrictFixer::class]);
